--- a/app/src/main/res/layout/activity_section_d3.xml
+++ b/app/src/main/res/layout/activity_section_d3.xml
@@ -57,24 +57,43 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
-                    android:text="@string/weeks" />
+                    android:text="@string/age" />
+
+                <EditText
+                    android:id="@+id/kd301wk"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:digits="0123456789"
+                    android:hint="@string/weeks"
+                    android:inputType="number"
+                    android:maxLength="2"
+                    android:text='@{kd301a.checked ? kd301wk.getText.toString : ""}'
+                    android:visibility='@{kd301a.checked ? View.VISIBLE : View.GONE}' />
+
+                <EditText
+                    android:id="@+id/kd301mon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:digits="0123456789"
+                    android:hint="@string/months"
+                    android:inputType="number"
+                    android:maxLength="2"
+                    android:text='@{kd301a.checked ? kd301mon.getText.toString : ""}'
+                    android:visibility='@{kd301a.checked ? View.VISIBLE : View.GONE}' />
+
+                <EditText
+                    android:id="@+id/kd301yr"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:digits="0123456789"
+                    android:hint="@string/years"
+                    android:inputType="number"
+                    android:maxLength="2"
+                    android:text='@{kd301a.checked ? kd301yr.getText.toString : ""}'
+                    android:visibility='@{kd301a.checked ? View.VISIBLE : View.GONE}' />
 
                 <RadioButton
                     android:id="@+id/kd301b"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/months" />
-
-                <RadioButton
-                    android:id="@+id/kd301c"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/years" />
-
-                <RadioButton
-                    android:id="@+id/kd301d"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
@@ -214,8 +233,8 @@
                     android:id="@+id/fldGrpkd303"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <!--kd303-->
                     <TextView
@@ -262,14 +281,13 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="1dp"
                             android:text="@string/dkn" />
+
                         <RadioButton
                             android:id="@+id/kd30396"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="1dp"
                             android:text="@string/others" />
-
-
 
 
                         <EditText
@@ -289,172 +307,166 @@
             </LinearLayout>
 
             <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorPrimary"
+                android:text="@string/kd304"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@android:color/white" />
+
+            <RadioGroup
+                android:id="@+id/kd304"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <RadioButton
+                    android:id="@+id/kd304a"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/age" />
+
+                <EditText
+                    android:id="@+id/kd304m"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="1dp"
+                    android:digits="0123456789"
+                    android:hint="@string/months"
+                    android:inputType="number"
+                    android:maxLength="2"
+                    android:text='@{kd304a.checked ? kd304m.getText.toString : ""}'
+                    android:visibility='@{kd304a.checked ? View.VISIBLE : View.GONE}' />
+
+                <EditText
+                    android:id="@+id/kd304y"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="1dp"
+                    android:digits="0123456789"
+                    android:hint="@string/years"
+                    android:inputType="number"
+                    android:maxLength="2"
+                    android:text='@{kd304a.checked ? kd304y.getText.toString : ""}'
+                    android:visibility='@{kd304a.checked ? View.VISIBLE : View.GONE}' />
+
+                <RadioButton
+                    android:id="@+id/kd304c"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="1dp"
+                    android:text="@string/kd304d" />
+
+                <RadioButton
+                    android:id="@+id/kd30498"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="1dp"
+                    android:text="@string/dkn" />
+
+            </RadioGroup>
+
+            <LinearLayout
+                android:id="@+id/fldGrpkd305"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <!--kd305-->
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:background="@color/colorPrimary"
-                    android:text="@string/kd304"
+                    android:text="@string/kd305"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@android:color/white" />
 
                 <RadioGroup
-                    android:id="@+id/kd304"
+                    android:id="@+id/kd305"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_weight="1.5"
                     android:orientation="vertical">
 
                     <RadioButton
-                        android:id="@+id/kd304a"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/months" />
-
-                    <EditText
-                        android:id="@+id/kd304m"
+                        android:id="@+id/kd305a"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
-                        android:digits="0123456789"
-                        android:hint="@string/months"
-                        android:inputType="number"
-                        android:maxLength="2"
-                        android:text='@{kd304a.checked ? kd304m.getText.toString : ""}'
-                        android:visibility='@{kd304a.checked ? View.VISIBLE : View.GONE}' />
+                        android:text="@string/kd305a" />
 
                     <RadioButton
-                        android:id="@+id/kd304b"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/years" />
-
-                    <EditText
-                        android:id="@+id/kd304y"
+                        android:id="@+id/kd305b"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
-                        android:digits="0123456789"
-                        android:hint="@string/years"
-                        android:inputType="number"
-                        android:maxLength="2"
-                        android:text='@{kd304b.checked ? kd304y.getText.toString : ""}'
-                        android:visibility='@{kd304b.checked ? View.VISIBLE : View.GONE}' />
+                        android:text="@string/kd305b" />
 
                     <RadioButton
-                        android:id="@+id/kd304c"
+                        android:id="@+id/kd305c"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
-                        android:text="@string/kd304d" />
+                        android:text="@string/kd305c" />
 
                     <RadioButton
-                        android:id="@+id/kd30498"
+                        android:id="@+id/kd305d"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="1dp"
+                        android:text="@string/kd305d" />
+
+                    <RadioButton
+                        android:id="@+id/kd305e"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="1dp"
+                        android:text="@string/kd305e" />
+
+                    <RadioButton
+                        android:id="@+id/kd305f"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="1dp"
+                        android:text="@string/kd305f" />
+
+                    <RadioButton
+                        android:id="@+id/kd305g"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="1dp"
+                        android:text="@string/kd305g" />
+
+                    <RadioButton
+                        android:id="@+id/kd30598"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:text="@string/dkn" />
 
+                    <RadioButton
+                        android:id="@+id/kd30596"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="1dp"
+                        android:text="@string/others" />
+
                 </RadioGroup>
 
-                <LinearLayout
-                    android:id="@+id/fldGrpkd305"
+                <EditText
+                    android:id="@+id/kd30596x"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_marginTop="5dp"
+                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
+                    android:hint="@string/others"
+                    android:text='@{kd30596.checked ? kd30596x.getText.toString : ""}'
+                    android:visibility='@{kd30596.checked ? View.VISIBLE : View.GONE}' />
 
-                    <!--kd305-->
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:background="@color/colorPrimary"
-                        android:text="@string/kd305"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textColor="@android:color/white" />
-
-                    <RadioGroup
-                        android:id="@+id/kd305"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:layout_weight="1.5"
-                        android:orientation="vertical">
-
-                        <RadioButton
-                            android:id="@+id/kd305a"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="1dp"
-                            android:text="@string/kd305a" />
-
-                        <RadioButton
-                            android:id="@+id/kd305b"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="1dp"
-                            android:text="@string/kd305b" />
-
-                        <RadioButton
-                            android:id="@+id/kd305c"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="1dp"
-                            android:text="@string/kd305c" />
-
-                        <RadioButton
-                            android:id="@+id/kd305d"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="1dp"
-                            android:text="@string/kd305d" />
-
-                        <RadioButton
-                            android:id="@+id/kd305e"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="1dp"
-                            android:text="@string/kd305e" />
-
-                        <RadioButton
-                            android:id="@+id/kd305f"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="1dp"
-                            android:text="@string/kd305f" />
-
-                        <RadioButton
-                            android:id="@+id/kd305g"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="1dp"
-                            android:text="@string/kd305g" />
-
-                        <RadioButton
-                            android:id="@+id/kd30598"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="1dp"
-                            android:text="@string/dkn" />
-
-                        <RadioButton
-                            android:id="@+id/kd30596"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="1dp"
-                            android:text="@string/others" />
-
-                    </RadioGroup>
-
-                    <EditText
-                        android:id="@+id/kd30596x"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
-                        android:hint="@string/others"
-                        android:text='@{kd30596.checked ? kd30596x.getText.toString : ""}'
-                        android:visibility='@{kd30596.checked ? View.VISIBLE : View.GONE}' />
-
-                </LinearLayout>
+            </LinearLayout>
 
             <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout
